--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        </div>
     </div>
     </div>
-    <p class="text-center text-gray-500 text-sm">© 2025 Paris Café. All rights reserved.</p>
+    <p class="text-center text-gray-500 text-sm pb-3">© 2025 Paris Café. All rights reserved.</p>
     </div>
     
 </body>
